<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">CoboltFM</string>
<string name="alert_dialog_single_choice">Error</string>
<string name="alert_dialog_ok">OK</string>
<string name="alert_dialog_cancel">Cancel</string>
<string name="support_dialog_title">Please Support CoboltFM</string>
<string name="support_dialog_text">If you like CoboltFM, why not consider supporting its development? For the time being, you can do so easily by clicking on the sponsor ad or by using PayPal or flattr. Thanks!</string>
<string name="support_dialog_yes">Yes, good idea!</string>
<string name="support_dialog_no">No, not now.</string>
<string name="support_dialog_neveragain">Never ask again!</string>
<string name="support_dialog_settings_show">Show Support Dialog on Startup</string>
<string name="headphone_plug_settings">Headphone Unplug/Plug pauses/resumes</string>
<string name="vibrate_settings">Vibrate on Track Change</string>
<string name="alternate_conn_settings">Alternative Connection Method</string>
<string name="alternate_conn_expl">Try this when all seems fine, but the radio does not start to play.</string>
<string name="streaming_settings">Enable Streaming Proxy</string>
<string name="streaming_expl">Try enabling/ disabling this when buffering does not work. Autodetected on a fresh install.</string>
<string name="scrobbling_settings">Enable Scrobbling</string>


<string name="sleeptimer_settings">Enable Sleep Timer</string>
<string name="sleeptimer_expl">Stop playing after this many minutes.</string>
<string name="goodnight">Good night!</string>

       
<string name="user_info_title">User Info</string>
<string name="ok_button">OK</string>
<string name="cancel_button">Cancel</string>
<string name="menu_settings">Settings</string>
<string name="share_track_title">Share Track</string>
<string name="menu_about">About</string>
<string name="menu_status">Check Server Status</string>
<string name="menu_profile">Show Profile Page</string>
<string name="about_title">About</string>
<string name="albumcover_title">Album Cover</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="signup">Don\'t have a last.fm username? Register at http://last.fm/join</string>
<string name="track_loved">Track loved</string>
<string name="track_banned">Track banned</string>
<string name="track_shared">Track shared</string>
<string name="message">Message</string>
<string name="with">with</string>
<string name="tune">Tune</string>
<string name="enter_artist_name_title">Enter artist name</string>
<string name="enter_tag_title">Enter tag</string>
<string name="choose_friend_title">Choose friend</string>
<string name="prebuffer">Set percent of song to prebuffer:</string>
<string name="prebuffer_expl">Prebuffering ensures that there are less skips within songs, but there can be longer pauses between songs. Try setting this to higher values when you have bad Internet connectivity.</string>
<string name="userinfo_button">Change user name &amp; password</string>
<string name="reset_button">Reset all settings</string>
<string name="settings_title">Settings</string>
<string name="madeby">Produced by CoboltForge (www.coboltforge.com), based on alastfm by Oleg Avdeev (lastfm.ajaxie.com)</string>
<string name="reset_question">Are you really sure you want to reset all settings, including your saved last.fm username and password?</string>

<string name="artist">Artist</string>
<string name="myrecommendations">My Recommendations</string>
<string name="mymix">My Mix</string>
<string name="myradiostation">My Radio Station</string>
<string name="myneighbourradio">My Neighbour Radio</string>
<string name="myfriends">My Friends\' Radio</string>

<string name="pleasewait">Please wait while loading...</string>

<string name="uri_neighbours">\'s Neighbourhood</string>
<string name="uri_library">\'s Library</string>
<string name="uri_recommendations">\'s Recommendations</string>
<string name="uri_mix">\'s Mix</string>
    
<string name="disconnected">Disconnected</string>
<string name="connecting">Connecting...</string>
<string name="playing">Playing</string>

<string name="artistmissing">Please enter some artist name!</string>
<string name="tagmissing">Please enter some tag name!</string>


</resources>
