<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <ScrollView 
		android:layout_gravity="center_vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">  
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dip"
		    >
		              
		<Button android:id="@+id/reset_button"
		    android:layout_height="wrap_content" 
		    android:autoLink="all"
			android:layout_marginBottom="20dip"
		    android:text="@string/reset_button"
		    android:layout_width="fill_parent"
		    android:drawableLeft="@drawable/indicator_input_error"/>                        
                    
        <Button android:id="@+id/userinfo_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
	        android:text="@string/userinfo_button"
	       	android:layout_marginBottom="20dip"/>
     
       
        <TextView android:text="@string/prebuffer"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_marginBottom="5dip"
         />
            
        <LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	    
	        <SeekBar android:id="@+id/prebuffer_slider"
	         android:layout_height="wrap_content" 
	         android:max="100"
	         android:layout_marginBottom="5dip" 
	         android:layout_marginRight="10dip" 
	         android:layout_width="0dip" android:layout_weight="6"/>
	         
		     <TextView 
		     android:id="@+id/prebuffer_textview"
		     android:text="05 %"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center" android:layout_width="0dip" android:layout_weight="1"/>
	         
         </LinearLayout>
    
         <TextView
            android:layout_width="fill_parent"
            android:text="@string/prebuffer_expl" android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"/>
               
         <CheckBox
            android:id="@+id/headphone_plug_checkbox" 
            android:text="@string/headphone_plug_settings" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
           android:layout_margin="5dip" ></CheckBox> 
            
         <CheckBox
            android:id="@+id/support_dialog_checkbox" 
            android:text="@string/support_dialog_settings_show" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
             android:layout_margin="5dip"></CheckBox>
     
     
       </LinearLayout>
     
     </ScrollView>
                                    
</LinearLayout>
